--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 /*
 !/.gitignore
 
-!/.oh-my-zsh
-/.oh-my-zsh/cache/*
-/.oh-my-zsh/log/*
 !/.zshrc
 
 !/.vimrc
@@ -12,3 +9,5 @@
 !/.bashrc
 
 !/.tmux.conf
+
+!/terminal-setup.sh
